--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-router": "^1.121.2",
     "@tanstack/react-router-devtools": "^1.121.2",
+    "aws-amplify": "^6.15.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "effector": "^23.4.1",
     "effector-react": "^23.3.0",
     "lucide-react": "^0.525.0",
@@ -33,15 +35,20 @@
     "tw-animate-css": "^1.3.5"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.16.1",
+    "@aws-amplify/backend-cli": "^1.8.0",
     "@tanstack/eslint-config": "^0.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "aws-cdk": "^2.1021.0",
+    "aws-cdk-lib": "^2.206.0",
+    "constructs": "^10.4.2",
     "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
-    "typescript": "^5.7.2",
+    "typescript": "^5.8.3",
     "vite": "^6.1.0",
     "vitest": "^3.0.5",
     "web-vitals": "^4.2.4"
